Primera modificacion de jonhy

--- a/Tarea1.html
+++ b/Tarea1.html
@@ -5,6 +5,18 @@
 	<title>Tarea 1 :D</title>
 </head>
 <body>
-	Hola abby =P
+	<header>
+
+	</header>
+
+	<section>
+	</section>
+
+	<aside>
+	</aside>
+
+	<footer>
+	</footer>
+
 </body>
 </html>
