--- a/Tarea1.html
+++ b/Tarea1.html
@@ -1,24 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<title>Tarea 1 :D</title>
 </head>
 <body>
-	<header>
-
-	</header>
-
-	<section>
-	</section>
-
-	<aside>
-	</aside>	
-
-	<footer>
-		Este es el footer
-		<h3>Funciona???</h3>
-	</footer>
+	
+	<h1>Esto es de Super  Jonhy =P</h1><br/>
+	<h2>Etiquetas de Contenido incrustado</h2>
+	
+	
 
 </body>
 </html>
