Agrego carpeta de plugin

--- a/Tarea1.html
+++ b/Tarea1.html
@@ -18,6 +18,19 @@
 	<aside>
 		<h1>Esto es de Super  Jonhy =P</h1><br/>
 		<h2>Etiquetas de Contenido incrustado</h2>
+		<p>etiqueta img para imagenes</p>
+		<img src="./img/chubaca.jpeg"/>
+		<p>Etiqueta iframe para poner otras paginas dentro de la nuestra</p>
+		<iframe src="http://proteco.fi-b.unam.mx/"></iframe>
+		<p>Etiqueta embed (HTML5)</p>
+		<embed src=""></embed>
+		<p>Que no se ve porque necesito algun archivo de pluging :/</p>
+		<br/>
+		<p>Ahora param pasa parametros para el uso de plugins y object</p>
+		<object data="horse.wav">
+			<param name="autoplay" value="true"></param>
+		</object>
+
 	</aside>
 
 	<footer>
