Comprobando copatibilidad de param

--- a/Tarea1.html
+++ b/Tarea1.html
@@ -27,7 +27,7 @@
 		<p>Que no se ve porque necesito algun archivo de pluging :/</p>
 		<br/>
 		<p>Ahora param pasa parametros para el uso de plugins y object</p>
-		<object data="horse.wav">
+		<object data="/pluging/horse.wav">
 			<param name="autoplay" value="true"></param>
 		</object>
 
