Parte de jonhy terminada

--- a/Tarea1.html
+++ b/Tarea1.html
@@ -9,7 +9,9 @@
 
 	
 	<header>
-
+		<nav>
+			Aqui va el menu de navegacion
+		</nav>
 	</header>
 
 	<section>
@@ -52,9 +54,38 @@
 			<br>Ejemplo: <samp>Este es el ejemplo</samp>
 		</p>
 	</section>
+	
+
+	<h1>Esto es de Super  Jonhy =P</h1><br/>
+	<section>
+		<article>
+			En una seccion se pueden poner varios articulos
+		</article>
+		<article>
+			Articulo 2
+		</article>
+		<h1>Eti. h1 para letra grande</h1>
+		<h2>Un poco mas chica</h2>
+		<h3>Mas</h3>
+		<h4>Mas</h4>
+		<h5>Mas</h5>
+		<h6>Lo mas pequeño</h6>
+		<br/>
+		<p>La etiqueta address para contacto</p>
+		<address>
+			Parte de <a href="mailto:jonhyrowing@hotmail.com">Jonhy</a>.<br> 
+		 	Facebook: SirHoney<br>
+			Mi casa 564, Disneyland<br>
+			Tepito :P
+		</address>
+		<br/>
+		<main>
+			El main se supone contiene elementos unicos de la pagina que no se repiten.(HTML5)
+		</main>
+	</section>
 
 	<aside>
-		<h1>Esto es de Super  Jonhy =P</h1><br/>
+		
 		<h2>Etiquetas de Contenido incrustado</h2>
 		<p>etiqueta img para imagenes</p>
 		<img src="./img/chubaca.jpeg"/>
@@ -171,11 +202,18 @@
 		<details>
 			Etiqueta details, se colocan detalles sobre los programas (HTML5)
 		</details>
-		
-		
-	</aside>
+		<summary>Copyright 1999-2011.
+				Define un encabezado para details (HTML5)
+		</summary>
+			
+			<br/>
+		<p>Hay otras dos etiquetas que son comamand que solo es soportado en IE9 y menu, que contiene a los command.</p>
 
+
+	</aside>
+		
 	<footer>
+		En el footer se ponen cosas como, bolsa de trabajo, links a facebook y twitter, contacto, politicas, etc.
 	</footer>
 
 
