--- a/Tarea1.html
+++ b/Tarea1.html
@@ -7,13 +7,21 @@
 <body>
 
 
-	<p>Este es un ejemplo de párrafo </p>
+	
 	<header>
 
 	</header>
 
 	<section>
-		Etiquetas de Abby \(n_n)/
+		<h1>Etiquetas de Abby \(n_n)/</h1>
+
+		<p>Este es un ejemplo de párrafo </p>
+		<p>
+			Sección 1 
+			<hr> 
+			Sección 2 
+			<hr> Sección 3
+		</p>
 		<p>
 			Este es un enlace a la página de proteco
 			<a title="Proteco" href="proteco.fi-b.unam.mx">PROTECO</a>
@@ -21,12 +29,109 @@
 		
 			<br><small>Esto es un comentario </small>
 			<br><s>Este texto</s> está tachado		
+			<br><i>Estilo de fuente Itálica</i>
+			<wbr>
+			<br><b>Texto en negritas</b>
+			<br><u>Estoy subrayado</u>
+			<br><bdo dir="rtl">Ejemplo con bdo</bdo>
+			<br><bdo dir="ltr">Ejemplo con bdo</bdo>
+			<br><span style="color:green; font-weight:bold;">Usado para añadir estilo en sección de texto</span>
+			<br>Etiqueta HTML5
+			<br><mark>Texto de especial importancia</mark>
+			<br><bdi dir="rtl">Anita lava la tina</bdi>
 			<br>
 			<br>
 			<br>
 			<br>
 			Antes de mi hay cuatro saltos de Línea
 		</p>
+		<p>
+			<pre>
+				Indica a los navegadores que se 
+				trata de un texto con formato:
+				con las sig características
+					respeta saltos de lina, espacios en blanco, 
+				tipo de fuente
+			</pre>
+		</p>
+		<p>
+			Cita de "El Principito" de Antonie de Saint-Exupéry
+			<blockquote>
+				Las personas mayores nunca son capaces de 
+				comprender las cosas por sí mismas, y es muy
+				aburrido para los niños tener que darles una
+				y otra vez explicaciones
+			</blockquote>
+			<br>
+			<br>
+			<br>Este es un ejemplo de lista ordenada
+			<ol>
+				<li>Uno</li>
+				<li>Dos</li>
+				<li>Tres</li>
+			</ol>
+			<br>
+			<br>Este es un ejemplo de lista de definiciones
+			<dl>
+				<dt>Chocolate</dt>
+					<dd>Base de cacao</dd>
+				<dt>Caramelo</dt>
+					<dd>Base de azúcar</dd>
+			</dl>
+			<br>
+			<br>
+			<br>Ejemplo de etiqueta html5
+			<br>Listas con encabezado
+			<figure>
+					<legend>Apples</legend>
+					<ul>
+						<li>Granny Smith</li>
+						<li>Apple, Inc</li>
+					</ul>
+			</figure>
+			<br>
+			<br>
+			<div>Esto es un contenedor genérico :D</div>
+		</p>
+		<p>
+			Esto es una tabla
+			<table border="1" width="250px">
+				<colgroup width="180px"></colgroup>
+				<caption>Nombre de losVirtuales</caption>
+				<tr>
+					<th>Nombre</th>
+					<th>Edad</th>
+				</tr>
+				<tr>
+					<td>Jhonatan</td>
+					<td>18</td>
+				</tr>
+				<tr>
+					<td>Abigail</td>
+					<td>20</td>
+				</tr>				
+			</table>
+
+			<br>
+			<br>
+			<br>Este es otro ejemplo de tabla 
+			<table width="300px" border="1">
+				<col width="150px" />
+				<col width="100px" />
+				<col width="50px" />
+				<tr>
+					<th>Producto</th>
+					<th>Calorias</th>
+					<th>Marca</th>
+				</tr>
+				<tr>
+					<td>Frutal</td>
+					<td>209</td>
+					<td>Alpura</td>
+				</tr>
+			</table> 
+		</p>
+		
 		<p>
 			<br>Sirve para indicar el autor de una cita
 			<br><cite>Laura Esquivel</cite>: 
@@ -50,7 +155,19 @@
 		<p>
 			Esta etiqueta contiene texto que corresponde a una salida de programas o scripts
 			<br>Ejemplo: <samp>Este es el ejemplo</samp>
+			<br>
+			<br>Texto correspondiente a entrada de teclado
+			<br>Para crear un directorio ejecute <kbd>mkdir ejemplo</kbd> desde la terminal.
+			<br>
+			<br>Ejemplo de subíndices:
+			<br>Fórmula química del alcohol: C<sub>2</sub>H<sub>6</sub>O
+			<br>
+			<br>Ejemplo de superíndices:
+			<br>Polinomio tercer grado: x<sup>3</sup>+2x<sup>2</sup>+3
+
 		</p>
+
+
 	</section>
 
 	<aside>
