--- a/Tarea2Branches.html
+++ b/Tarea2Branches.html
@@ -1,1 +1,15 @@
-Esto es una prueba
+<!doctype html>
+<html lang="es">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Tarea 2 Los Virtuales</title>
+        <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
+        <link href="css/bootstrap.css" rel="stylesheet" type="text/javascript"/>
+        <link href="css/cover.css" rel="stylesheet"/>
+        <link href="css/indexcss.css" rel="stylesheet"/>
+        <link type="image/png" rel="icon" href="img/wizu.png"  />
+</head>
+<body>
+	
+</body>
+</html>
