--- a/Tarea2Branches.html
+++ b/Tarea2Branches.html
@@ -8,6 +8,7 @@
         <link href="css/cover.css" rel="stylesheet"/>
         <link href="css/indexcss.css" rel="stylesheet"/>
         <link type="image/png" rel="icon" href="img/wizu.png"  />
+        <script type="text/javascript" src="js/bootstrap.js"></script>
 </head>
 <body>
 	
