Agregando los scripts al html

--- a/Tarea2Branches.html
+++ b/Tarea2Branches.html
@@ -9,6 +9,9 @@
         <link href="css/indexcss.css" rel="stylesheet"/>
         <link type="image/png" rel="icon" href="img/wizu.png"  />
         <script type="text/javascript" src="js/bootstrap.js"></script>
+        <script type="text/javascript" src="js/docs.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        
 </head>
 <body>
 	
