--- a/Tarea2Branches.html
+++ b/Tarea2Branches.html
@@ -9,9 +9,21 @@
         <link href="css/indexcss.css" rel="stylesheet"/>
         <link type="image/png" rel="icon" href="img/wizu.png"  />
         <script type="text/javascript" src="js/bootstrap.js"></script>
+        
 </head>
 <body>
-	
+	<nav>
+		 <div class="masthead clearfix">
+              <div class="inner">
+                  <img src="img/wizu.png" class="masthead-brand" height="55" width="55"/>
+                <ul class="nav masthead-nav">
+                  <li><a href="" data-toggle="modal" data-target="#Abby">Abby</a></li>
+                  <li><a href="" data-toggle="modal" data-target="#Jonhy">Jonhy</a></li>
+                  <li><a href="" data-toggle="modal" data-target="#Contacto">Contacto</a></li>
+                </ul>
+              </div>
+            </div>
+	</nav>
 </body>
 </html>
 
