Agregando Modal de Jonh

--- a/Tarea2Branches.html
+++ b/Tarea2Branches.html
@@ -44,9 +44,24 @@
   					</div>
 				</div>
                 <!--/////////////////////Jony///////////////////////////////////////////////-->
-
-
-
+                <div class="modal fade" id="Jonhy" tabindex="-1" role="dialog" aria-labelledby="JonhyLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title Etiquetas" id="JonhyLabel">Jonhy</h4>
+                    </div>
+                    <div class="modal-body">
+                      <div class="form-group">
+                        <h2>Jonhy</h2>
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary pull-left" data-dismiss="modal"><h5>Close</h5></button>
+                    </div>
+                  </div>
+                </div>
+              </div>
                 
               </div>
             </div>
