Agregue la etiqueta section para el cuerpo de la pagina

--- a/Tarea2Branches.html
+++ b/Tarea2Branches.html
@@ -7,17 +7,15 @@
         <link href="css/bootstrap.css" rel="stylesheet" type="text/javascript"/>
         <link href="css/cover.css" rel="stylesheet"/>
         <link href="css/indexcss.css" rel="stylesheet"/>
-        <link type="image/png" rel="icon" href="img/wizu.png"/>
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <script type="text/javascript" src="js/docs.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </head>
 <body>
-	<nav>
+	<nav class="container">
 		 <div class="masthead clearfix">
               <div class="inner">
-                  <img src="img/wizu.png" class="masthead-brand" height="55" width="55"/>
                 <ul class="nav masthead-nav">
                   <li><a href="" data-toggle="modal" data-target="#Abby">Abby</a></li>
                   <li><a href="" data-toggle="modal" data-target="#Jonhy">Jonhy</a></li>
@@ -61,11 +59,14 @@
                     </div>
                   </div>
                 </div>
-              </div>
-                
+              </div>                
               </div>
             </div>
 	</nav>
+	<section class="container">
+		
+	</section>
+
 </body>
 </html>
 
