--- a/Tarea2Branches.html
+++ b/Tarea2Branches.html
@@ -67,8 +67,15 @@
 		<p>
       <h1>Está página ha sido creada mediante Branches en github \(*0*)/ </h1>  
     </p>
+    <p>Y abby tiene una creatividad impresionante hahahaha =P(Sarcasmo)</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, voluptates, nostrum, beatae, dolor eligendi quia officia provident fugiat aliquid veritatis vitae quam necessitatibus vel libero repudiandae adipisci odit dicta aspernatur eos blanditiis autem magnam suscipit itaque sit ullam! Enim, quam!</p>
 	</section>
-
+	<footer >
+		Este es el footer
+		<p >
+		<a href="http://fb.com"><img src="img/fb.png" alt="facebook"></a>
+		</p>
+	</footer>
 </body>
 </html>
 
