--- a/Tarea2Branches.html
+++ b/Tarea2Branches.html
@@ -29,10 +29,15 @@
         						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         						<h4 class="modal-title Etiquetas" id="AbbyLabel">Abby</h4>
       						</div>
-      						<div class="modal-body">
-          
+      						<div class="modal-body">          
               					<div class="form-group">
-	                				<h2>Abby</h2>
+	                				<pre>
+                            Me agradan los temas de desarrollo tecnológico, la 
+                            prgramación y tocar música.
+                              Me agrada aprender cosas nuevas sobre cualquier tema
+                            y coleccionar partituras :D
+                            <!--FIN-->
+                          </pre>
               					</div>
       						</div>
       							<div class="modal-footer">
