Agregando mis datos

--- a/Tarea2Branches.html
+++ b/Tarea2Branches.html
@@ -51,7 +51,15 @@
                     </div>
                     <div class="modal-body">
                       <div class="form-group">
-                        <h2>Jonhy</h2>
+                        <h2>Jonathan Velazquez</h2>
+                        <p>Nacido en mexico d.f. a verdad hahaha que flojera contar mi biografa.</p>
+                        Mejor les cuento que me gusta:
+                        <p>Me gusta hacer ejercicio, aunque ya no tengo tiempo de hacer, me encantan las chicas sexys =P,AMO con toda mi alma los chilaquiles y tengo la idea de que tengo que dejar mi huella en este  mundo.</p>
+                        <p>Considero que todo es posible, si no tienes grandes metas no conseguiras nada,vive el momento y trabaja por un futuro</p>
+                        <p>Se feliz,aunque parezcas loco  :)</p>
+                        <details>
+                        	Perdonen mi dislexia
+                        </details>
                       </div>
                     </div>
                     <div class="modal-footer">
@@ -67,7 +75,6 @@
 		<p>
       <h1>Está página ha sido creada mediante Branches en github \(*0*)/ </h1>  
     </p>
-    <p>Y abby tiene una creatividad impresionante hahahaha =P(Sarcasmo)</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, voluptates, nostrum, beatae, dolor eligendi quia officia provident fugiat aliquid veritatis vitae quam necessitatibus vel libero repudiandae adipisci odit dicta aspernatur eos blanditiis autem magnam suscipit itaque sit ullam! Enim, quam!</p>
 	</section>
 	<footer >
