--- a/Tarea2Branches.html
+++ b/Tarea2Branches.html
@@ -18,7 +18,7 @@
               <div class="inner">
                 <ul class="nav masthead-nav">
                   <li><a href="" data-toggle="modal" data-target="#Abby">Abby</a></li>
-                  <li><a href="" data-toggle="modal" data-target="#Jonhy">Jonhy</a></li>
+                  <li><a href="" data-toggle="modal" data-target="#Jona">Jona</a></li>
                   <li><a href="" data-toggle="modal" data-target="#Contacto">Contacto</a></li>
                 </ul>
                 <!--/////////////////////Abby///////////////////////////////////////////////-->
@@ -31,13 +31,13 @@
       						</div>
       						<div class="modal-body">          
               					<div class="form-group">
-	                				<pre>
+	                				<p>
                             Me agradan los temas de desarrollo tecnológico, la 
                             prgramación y tocar música.
                               Me agrada aprender cosas nuevas sobre cualquier tema
                             y coleccionar partituras :D
                             <!--FIN-->
-                          </pre>
+                          </p>
               					</div>
       						</div>
       							<div class="modal-footer">
@@ -47,12 +47,12 @@
   					</div>
 				</div>
                 <!--/////////////////////Jony///////////////////////////////////////////////-->
-                <div class="modal fade" id="Jonhy" tabindex="-1" role="dialog" aria-labelledby="JonhyLabel" aria-hidden="true">
+                <div class="modal fade" id="Jona" tabindex="-1" role="dialog" aria-labelledby="JonaLabel" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                      <h4 class="modal-title Etiquetas" id="JonhyLabel">Jonhy</h4>
+                      <h4 class="modal-title Etiquetas" id="JonaLabel">Jona</h4>
                     </div>
                     <div class="modal-body">
                       <div class="form-group">
@@ -61,10 +61,29 @@
                         Mejor les cuento que me gusta:
                         <p>Me gusta hacer ejercicio, aunque ya no tengo tiempo de hacer, me encantan las chicas sexys =P,AMO con toda mi alma los chilaquiles y tengo la idea de que tengo que dejar mi huella en este  mundo.</p>
                         <p>Considero que todo es posible, si no tienes grandes metas no conseguiras nada,vive el momento y trabaja por un futuro</p>
-                        <p>Se feliz,aunque parezcas loco  :)</p>
-                        <details>
-                        	Perdonen mi dislexia
-                        </details>
+                        <p>Se feliz,aunque parezcas loco</p>
+                        
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary pull-left" data-dismiss="modal"><h5>Close</h5></button>
+                    </div>
+                  </div>
+                </div>
+              </div>                
+              </div>
+            </div>
+        <!--Contacto-->
+         <div class="modal fade" id="Contacto" tabindex="-1" role="dialog" aria-labelledby="ContactoLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title Etiquetas" id="ContactoLabel">Contacto</h4>
+                    </div>
+                    <div class="modal-body">
+                      <div class="form-group">
+                        <h2>Contacto </h2>
                       </div>
                     </div>
                     <div class="modal-footer">
